--- a/learnopengl/learnopengl.vcxproj
+++ b/learnopengl/learnopengl.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -73,6 +73,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LibraryPath>D:\John\Programming\OpenGL\Libs;$(LibraryPath)</LibraryPath>
     <IncludePath>D:\John\Programming\OpenGL\Includes;$(IncludePath)</IncludePath>
+    <PublicIncludeDirectories>$(ProjectDir)glsl;$(ProjectDir)resources;$(ProjectDir)sources;$(ProjectDir)includes;$(PublicIncludeDirectories)</PublicIncludeDirectories>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -108,6 +109,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)includes;$(ProjectDir)sources;$(ProjectDir)resources;$(ProjectDir)glsl</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -133,14 +135,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="D:\John\Downloads\glad\src\glad.c" />
+    <ClCompile Include="stb_image.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="FragmentShader.frag" />
-    <None Include="VertexShader.vert" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="shaders.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="shaders.h" />
+    <None Include="glsl\FragmentShader.frag" />
+    <None Include="glsl\VertexShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
