--- a/learnopengl/learnopengl.vcxproj.filters
+++ b/learnopengl/learnopengl.vcxproj.filters
@@ -21,18 +21,24 @@
     <ClCompile Include="Window.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="VertexShader.vert">
+    <ClCompile Include="stb_image.cpp">
       <Filter>Source Files</Filter>
-    </None>
-    <None Include="FragmentShader.frag">
-      <Filter>Source Files</Filter>
-    </None>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaders.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="glsl\FragmentShader.frag">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="glsl\VertexShader.vert">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
