--- a/learnopengl/learnopengl.vcxproj
+++ b/learnopengl/learnopengl.vcxproj
@@ -148,6 +148,7 @@
     <Image Include="resources\textures\container.jpg" />
     <Image Include="resources\textures\container2.png" />
     <Image Include="resources\textures\container2_specular.png" />
+    <Image Include="resources\textures\lighting_maps_specular_color.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="glsl\colors.frag" />
