Add emission map

--- a/learnopengl/learnopengl.vcxproj
+++ b/learnopengl/learnopengl.vcxproj
@@ -149,6 +149,7 @@
     <Image Include="resources\textures\container2.png" />
     <Image Include="resources\textures\container2_specular.png" />
     <Image Include="resources\textures\lighting_maps_specular_color.png" />
+    <Image Include="resources\textures\matrix.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="glsl\colors.frag" />
